# hackage-security

./: .appveyor.yml  .gitignore  .travis.yml  README.md  cabal.haskell-ci  cabal.project  hackage-security.cabal  stack-8.10.yaml  stack-8.4.yaml  stack-8.6.yaml  stack-8.8.yaml  stack-9.0.yaml  stack-9.10.yaml  stack-9.12.yaml  stack-9.2.yaml  stack-9.4.yaml  stack-9.6.yaml  stack-9.8.yaml  stack.yaml
.github/workflows/: haskell-ci.yml  haskell.yml  stack.yml
example-client/: Main.hs  example-client.cabal
example-client/ExampleClient/: HTTP.hs  Options.hs
example-client/src/: Main.hs  Prelude.hs
example-client/src/ExampleClient/: Options.hs
example-client/src/ExampleClient/HttpClient/: Conduit.hs  HTTP.hs
hackage-repo-tool/: ChangeLog  ChangeLog.md  README.md  hackage-repo-tool.cabal
hackage-repo-tool/src/: Main.hs
hackage-repo-tool/src/Hackage/Security/RepoTool/: Layout.hs  Options.hs  Paths.hs
hackage-repo-tool/src/Hackage/Security/RepoTool/Layout/: Keys.hs
hackage-repo-tool/src/Hackage/Security/RepoTool/Util/: IO.hs
hackage-repo-tool/src/Hackage/Security/Utility/: Layout.hs  Options.hs
hackage-repo-tool/src/Hackage/Security/Utility/Util/: IO.hs
hackage-root-tool/: ChangeLog.md  Main.hs  hackage-root-tool.cabal
hackage-root-tool/src/: Main.hs
hackage-security/: ChangeLog.md  hackage-security.cabal
hackage-security-HTTP/: ChangeLog.md  hackage-security-HTTP.cabal
hackage-security-HTTP/src/Hackage/Security/Client/Repository/HttpLib/: HTTP.hs
hackage-security-HTTP/src/Hackage/Security/Client/Repository/Remote/: HTTP.hs
hackage-security-curl/: hackage-security-curl.cabal
hackage-security-curl/src/Hackage/Security/Client/Repository/HttpLib/: Curl.hs
hackage-security-curl/src/Hackage/Security/Client/Repository/Remote/: Curl.hs
hackage-security-http-client/: ChangeLog.md  hackage-security-http-client.cabal
hackage-security-http-client/src/Hackage/Security/Client/Repository/HttpLib/: HttpClient.hs
hackage-security-http-client/src/Hackage/Security/Client/Repository/Remote/: HttpClient.hs
hackage-security-local/: LICENSE  hackage-security-local.cabal
hackage-security-local/src/: Main.hs
hackage-security-local/src/Hackage/Security/Local/: Layout.hs  Options.hs
hackage-security-utility/: hackage-security-utility.cabal
hackage-security-utility/src/: Main.hs
hackage-security-utility/src/Hackage/Security/Utility/: Layout.hs  Options.hs
hackage-security-utility/src/Hackage/Security/Utility/Util/: IO.hs
hackage-security/filelock/: filelock.cabal
hackage-security/filelock/System/: FileLock.hs
hackage-security/filelock/System/FileLock/Internal/: Flock.hsc  LockFileEx.hsc
hackage-security/filelock/tests/: lock.log.expected  test.hs
hackage-security/src/: MyPrelude.hs  Prelude.hs
hackage-security/src/Hackage/Security/: Base64.hs  Client.hs  JSON.hs  Key.hs  Server.hs  TUF.hs  Trusted.hs
hackage-security/src/Hackage/Security/Client/: Formats.hs  Repository.hs  Verify.hs
hackage-security/src/Hackage/Security/Client/Repository/: Cache.hs  HttpLib.hs  Local.hs  Remote.hs
hackage-security/src/Hackage/Security/Client/Repository/Local/: Internal.hs
hackage-security/src/Hackage/Security/JSON/: Archive.hs
hackage-security/src/Hackage/Security/Key/: Env.hs  ExplicitSharing.hs
hackage-security/src/Hackage/Security/Server/: IndexTarball.hs
hackage-security/src/Hackage/Security/TUF/: Common.hs  FileInfo.hs  FileMap.hs  Header.hs  Layout.hs  Mirrors.hs  Paths.hs  Patterns.hs  Root.hs  Signed.hs  Snapshot.hs  Targets.hs  Timestamp.hs
hackage-security/src/Hackage/Security/TUF/Layout/: Cache.hs  Index.hs  Repo.hs
hackage-security/src/Hackage/Security/Trusted/: TCB.hs
hackage-security/src/Hackage/Security/Util/: Base64.hs  Checked.hs  Exit.hs  FileLock.hsc  IO.hs  JSON.hs  Lens.hs  Lock.hs  Path.hs  Pretty.hs  Some.hs  Stack.hs  TypedEmbedded.hs
hackage-security/src/Text/JSON/: Canonical.hs
hackage-security/tests/: TestSuite.hs
hackage-security/tests/TestSuite/: HttpMem.hs  InMemCache.hs  InMemRepo.hs  InMemRepository.hs  JSON.hs  PrivateKeys.hs
hackage-security/tests/TestSuite/Util/: StrictMVar.hs
precompute-fileinfo/: precompute-fileinfo.cabal
precompute-fileinfo/src/: Main.hs
prototype/: Main.hs
prototype-state/: README.md
prototype/Prototype/: Options.hs
secure-local/: Main.hs  Prelude.hs
secure-local/Hackage/Security/Local/: Options.hs
src/: Prelude.hs
src/Hackage/Security/: Base64.hs  Client.hs  JSON.hs  Key.hs  Key.hs-boot  Signed.hs  Some.hs  TUF.hs  Trusted.hs  Verified.hs  Verified.hs-boot
src/Hackage/Security/Client/: Formats.hs  IndexTarball.hs  Repository.hs
src/Hackage/Security/Client/Repository/: HTTP.hs  Local.hs
src/Hackage/Security/FileType/: Common.hs  Root.hs  Snapshot.hs  Timestamp.hs
src/Hackage/Security/JSON/: Archive.hs
src/Hackage/Security/Key/: Env.hs  ExplicitSharing.hs
src/Hackage/Security/Server/: IndexTarball.hs
src/Hackage/Security/TUF/: Common.hs  FileInfo.hs  FileMap.hs  Header.hs  Ints.hs  Mirrors.hs  Patterns.hs  Root.hs  Signed.hs  Snapshot.hs  Targets.hs  Timestamp.hs
src/Hackage/Security/Trusted/: Unsafe.hs
src/Hackage/Security/Util/: IO.hs  Lens.hs  Some.hs  Stack.hs
src/Text/JSON/: Canonical.hs
testscripts/: squid.conf  test-outdated-index.sh  test-outdated-timestamp.sh  test-range-request.sh
