name:                hackage-security
version:             0.1.0.0
synopsis:            Hackage security library
-- description:
license:             BSD3
license-file:        LICENSE
author:              Edsko de Vries
maintainer:          edsko@well-typed.com
copyright:           Copyright 2015 Well-Typed LLP
category:            Distribution
build-type:          Simple
cabal-version:       >=1.10

flag base46
  description: Are we using base 4.6 or higher?
  manual: False

library
  exposed-modules:     Hackage.Security.Base64
                       Hackage.Security.Client
                       Hackage.Security.Client.IndexTarball
                       Hackage.Security.Client.Repository
                       Hackage.Security.Client.Repository.Local
                       Hackage.Security.Client.Repository.HTTP
                       Hackage.Security.JSON
                       Hackage.Security.Key
                       Hackage.Security.Key.Env
                       Hackage.Security.Key.ExplicitSharing
                       Hackage.Security.Server.IndexTarball
                       Hackage.Security.Some
                       Hackage.Security.Trusted
                       Hackage.Security.Trusted.Unsafe
                       Hackage.Security.TUF
                       Hackage.Security.TUF.Common
                       Hackage.Security.TUF.FileInfo
                       Hackage.Security.TUF.FileMap
                       Hackage.Security.TUF.Header
                       Hackage.Security.TUF.Root
                       Hackage.Security.TUF.Signed
                       Hackage.Security.TUF.Snapshot
                       Hackage.Security.TUF.Targets
                       Hackage.Security.TUF.Timestamp
  other-modules:       Prelude
                       Text.JSON.Canonical
  -- We support ghc 7.2 (bundled with Cabal 1.12) and up
  -- Upper bounds deliberately omitted during development
  build-depends:       base              >= 4.4,
                       base64-bytestring >= 1.0,
                       bytestring        >= 0.9,
                       Cabal             >= 1.12,
                       containers        >= 0.4,
                       directory         >= 1.1,
                       ed25519           >= 0.0,
                       filepath          >= 1.2,
                       mtl               >= 2.2,
                       network-uri       >= 2.6,
                       parsec            >= 3.1,
                       SHA               >= 1.6,
                       -- version 0.4.2 of tar introduces TarIndex
                       tar               >= 0.4.2,
                       time              >= 1.2,
                       transformers      >= 0.4,
                       zlib              >= 0.6,
                       -- whatever version is bundled with ghc
                       template-haskell
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  DefaultSignatures
                       DeriveDataTypeable
                       FlexibleContexts
                       FlexibleInstances
                       GADTs
                       GeneralizedNewtypeDeriving
                       KindSignatures
                       MultiParamTypeClasses
                       NoMonomorphismRestriction
                       RankNTypes
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeFamilies
                       TypeOperators
                       ViewPatterns
  other-extensions:    BangPatterns
                       CPP
                       OverlappingInstances
                       PackageImports
                       QuasiQuotes
                       TemplateHaskell
  -- TODO: We should get rid of the -fno-warn-deprecated-flags here
  ghc-options:         -Wall -fno-warn-deprecated-flags

  if flag(base46)
    build-depends: base >= 4.6
  else
    build-depends: old-locale >= 1.0

  if impl(ghc >= 7.8)
     default-extensions: RoleAnnotations

executable hackage-secure-local
  main-is:             Main.hs
  other-modules:       Hackage.Security.Local.Options
                       Prelude
  build-depends:       base                 >= 4.4,
                       bytestring           >= 0.9,
                       Cabal                >= 1.12,
                       directory            >= 1.1,
                       filepath             >= 1.2,
                       optparse-applicative >= 0.11,
                       tar                  >= 0.4,
                       temporary            >= 1.2,
                       time                 >= 1.2,
                       zlib                 >= 0.6,
                       hackage-security
  hs-source-dirs:      secure-local
  default-language:    Haskell2010
  default-extensions:  RecordWildCards
  other-extensions:    TemplateHaskell
  ghc-options:         -Wall

-- TODO: We should have a mirror client as executable as well
