name:                example-client
version:             0.1.0.0
synopsis:            Example hackage-security client
description:         Example client using the hackage-security library.
license:             BSD3
license-file:        LICENSE
author:              Edsko de Vries
maintainer:          edsko@well-typed.com
copyright:           Copyright 2015 Well-Typed LLP
category:            Distribution
build-type:          Simple
cabal-version:       >=1.10

tested-with:
  GHC==9.4.1, GHC==9.2.4, GHC==9.0.2,
  GHC==8.10.7, GHC==8.8.4, GHC==8.6.5, GHC==8.4.4, GHC==8.2.2, GHC==8.0.2,
  GHC==7.10.3, GHC==7.8.4, GHC==7.6.3, GHC==7.4.2

flag use-network-uri
  description: Are we using network-uri?
  manual: False

flag Cabal-syntax
  description: Are we using Cabal-syntax?
  manual: False
  default: False

executable example-client
  main-is:             Main.hs
  other-modules: Prelude ExampleClient.Options

  build-depends:       base                 >= 4.5 && < 4.18,
                       bytestring           >= 0.9,
                       directory            >= 1.1,
                       filepath             >= 1.2,
                       optparse-applicative >= 0.11,
                       time                 >= 1.2,
                       hackage-security     >= 0.5,
                       hackage-security-HTTP,
                       hackage-security-curl,
                       hackage-security-http-client
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  DeriveDataTypeable
                       FlexibleContexts
                       RankNTypes
                       RecordWildCards
                       ScopedTypeVariables
  other-extensions:    CPP
  ghc-options:         -Wall

  -- see comments in hackage-security.cabal
  if flag(use-network-uri)
    build-depends: network-uri >= 2.6 && < 2.7,
                   network     >= 2.6 && < 3.2
  else
    build-depends: network     >= 2.5 && < 2.6

  if flag(Cabal-syntax)
    build-depends: Cabal-syntax >= 3.7 && < 3.9
  else
    build-depends: Cabal        >= 1.12 && < 3.7,
                   Cabal-syntax <  3.7
