cabal-version:       1.12
name:                hackage-repo-tool
version:             0.1.1.4
x-revision:          2

build-type:          Simple
synopsis:            Manage secure file-based package repositories
description:         This utility can be used to manage secure file-based package
                     repositories (creating [TUF](https://theupdateframework.github.io/)
                     metadata as well as a Hackage index tarball) which can be used by
                     clients such as [cabal-install](http://hackage.haskell.org/package/cabal-install).
                     Currently it also provides various lower level utilities for creating
                     and signing TUF files.
                     .
                     This is part of the [Hackage Security](https://github.com/haskell/hackage-security#readme)
                     infrastructure.
license:             BSD3
license-file:        LICENSE
author:              Edsko de Vries
maintainer:          cabal-devel@haskell.org
copyright:           Copyright 2015 Well-Typed LLP
category:            Distribution
homepage:            https://github.com/haskell/hackage-security
bug-reports:         https://github.com/haskell/hackage-security/issues

tested-with:
  GHC == 9.12.2
  GHC == 9.10.2
  GHC == 9.8.4
  GHC == 9.6.7
  GHC == 9.4.8
  GHC == 9.2.8
  GHC == 9.0.2
  GHC == 8.10.7
  GHC == 8.8.4
  GHC == 8.6.5
  GHC == 8.4.4

extra-source-files:
  ChangeLog.md README.md

source-repository head
  type: git
  location: https://github.com/haskell/hackage-security.git

flag Cabal-syntax
  description: Are we using Cabal-syntax?
  manual: False
  default: False

executable hackage-repo-tool
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Hackage.Security.RepoTool.Options
                       Hackage.Security.RepoTool.Layout
                       Hackage.Security.RepoTool.Layout.Keys
                       Hackage.Security.RepoTool.Paths
                       Hackage.Security.RepoTool.Util.IO

  -- For boot libraries we try to accomodate the versions bundled with
  -- the respective GHC release
  build-depends:       base                 >= 4.11     && < 4.22,
                       bytestring           >= 0.10.8.2 && < 0.13,
                       directory            >= 1.3.1.5  && < 1.4,
                       filepath             >= 1.4.2    && < 1.6,
                       network-uri          >= 2.6      && < 2.7,
                       network              >= 2.6      && < 3.3,
                       time                 >= 1.8.0.2  && < 1.15
  if !os(windows)
    build-depends:     unix                 >= 2.7.2.2  && < 2.9

  build-depends:       microlens            >= 0.4.9.1  && < 0.5,
                         -- microlens-0.4.9.1 is the version in Stackage LTS-12.26 (GHC 8.4)
                       optparse-applicative >= 0.13     && < 0.20,
                       tar                  >= 0.5      && < 0.7,
                       zlib                 >= 0.6      && < 0.8,
                       hackage-security     >= 0.6      && < 0.7

  if flag(Cabal-syntax)
    build-depends: Cabal-syntax >= 3.7 && < 3.18
  else
    build-depends: Cabal        >= 2.2.0.1 && < 2.6
                             || >= 3.0     && < 3.7,
                   Cabal-syntax <  3.7


  default-language:    Haskell2010
  default-extensions:  FlexibleContexts
                       FlexibleInstances
                       NoMonomorphismRestriction
                       ScopedTypeVariables
                       StandaloneDeriving
                       RecordWildCards

  ghc-options:         -Wall
