name:                hackage-root-tool
version:             0.1.0.0
synopsis:            Utility for Hackage key holders to generate keys and sign root info.
description:         A command line tool for people who hold Hackage root keys.
                     It can generate new keys, and can sign root information.
                     .
                     This is part of the Hackage Security infrastructure.
homepage:            http://github.com/well-typed/hackage-security/
license:             BSD3
license-file:        LICENSE
author:              Duncan Coutts, Edsko de Vries
maintainer:          duncan@well-typed.com
copyright:           Copyright 2015 Well-Typed LLP
category:            Distribution
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
  ChangeLog.md

source-repository head
  type:                git
  location:            http://github.com/well-typed/hackage-security
  subdir:              hackage-root-tool

executable hackage-root-tool
  main-is:             Main.hs
  build-depends:       base                 >= 4.4  && < 5,
                       filepath             >= 1.2  && < 1.5,
                       optparse-applicative >= 0.11 && < 0.13,
                       hackage-security     >= 0.2  && < 0.5
  default-language:    Haskell2010
  other-extensions:    CPP, ScopedTypeVariables, RecordWildCards
  ghc-options:         -Wall
