name:                hackage-root-tool
version:             0.1.0.0
synopsis:            Generate Hackage keys and sign root info
description:         A command line tool for people who hold Hackage root keys.
                     It can generate new keys, and can sign root information.
                     .
                     This is part of the Hackage Security infrastructure.
homepage:            http://github.com/well-typed/hackage-security/
license:             BSD3
license-file:        LICENSE
author:              Duncan Coutts, Edsko de Vries
maintainer:          duncan@well-typed.com
copyright:           Copyright 2015 Well-Typed LLP
category:            Distribution
build-type:          Simple
cabal-version:       >=1.10

tested-with:
  GHC==9.4.1, GHC==9.2.4, GHC==9.0.2,
  GHC==8.10.7, GHC==8.8.4, GHC==8.6.5, GHC==8.4.4, GHC==8.2.2, GHC==8.0.2,
  GHC==7.10.3, GHC==7.8.4, GHC==7.6.3, GHC==7.4.2

extra-source-files:
  ChangeLog.md

source-repository head
  type:                git
  location:            http://github.com/well-typed/hackage-security
  subdir:              hackage-root-tool

executable hackage-root-tool
  main-is:             Main.hs
  build-depends:       base                 >= 4.4  && < 5,
                       filepath             >= 1.2  && < 1.5,
                       optparse-applicative >= 0.11 && < 0.18,
                       hackage-security     >= 0.5  && < 0.7
  default-language:    Haskell2010
  other-extensions:    CPP, ScopedTypeVariables, RecordWildCards
  ghc-options:         -Wall
