cabal-version:       1.12
name:                hackage-security-HTTP
version:             0.1.1.1
x-revision:          7
synopsis:            Hackage security bindings against the HTTP library
description:         The hackage security library provides a 'HttpLib'
                     abstraction to allow to bind against different HTTP
                     libraries. This library implements this abstraction using
                     the @HTTP@ library.
license:             BSD3
license-file:        LICENSE
author:              Edsko de Vries
maintainer:          cabal-devel@haskell.org
copyright:           Copyright 2015-2016 Well-Typed LLP
category:            Distribution
homepage:            https://github.com/haskell/hackage-security
bug-reports:         https://github.com/haskell/hackage-security/issues
build-type:          Simple

tested-with:
  GHC == 9.8.0
  GHC == 9.6.3
  GHC == 9.4.7
  GHC == 9.2.8
  GHC == 9.0.2
  GHC == 8.10.7
  GHC == 8.8.4
  GHC == 8.6.5
  GHC == 8.4.4
  GHC == 8.2.2
  GHC == 8.0.2
  GHC == 7.10.3

extra-source-files:
  ChangeLog.md

source-repository head
  type: git
  location: https://github.com/haskell/hackage-security.git

flag use-network-uri
  description: Are we using network-uri?
  manual: False

library
  exposed-modules:     Hackage.Security.Client.Repository.HttpLib.HTTP
  build-depends:       base             >= 4.5       && < 4.20,
                       bytestring       >= 0.9       && < 0.13,
                       HTTP             >= 4000.2.19 && < 4000.5,
                       mtl              >= 2.1       && < 2.4,
                       zlib             >= 0.5       && < 0.7,
                       hackage-security >= 0.5       && < 0.7
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  DeriveDataTypeable
                       FlexibleContexts
                       RankNTypes
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
  other-extensions:    CPP
  ghc-options:         -Wall

  -- See comments in hackage-security.cabal
  if flag(use-network-uri)
    build-depends: network-uri >= 2.6 && < 2.7,
                   network     >= 2.6 && < 2.9
                            || >= 3.0 && < 3.2
  else
    build-depends: network     >= 2.5 && < 2.6
