name:                hackage-security-curl
version:             0.1.0.0
synopsis:            Hackage security bindings against curl (and other external downloaders)
homepage:            http://github.com/well-typed/hackage-security/
license:             BSD3
license-file:        LICENSE
author:              Edsko de Vries
maintainer:          edsko@well-typed.com
copyright:           Copyright 2015 Well-Typed LLP
category:            Distribution
build-type:          Simple
cabal-version:       >=1.10

flag use-network-uri
  description: Are we using network-uri?
  manual: False

library
  exposed-modules:     Hackage.Security.Client.Repository.HttpLib.Curl
  build-depends:       base        >= 4.4,
                       bytestring  >= 0.9,
                       process     >= 1.1,
                       hackage-security
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

  -- See comments in hackage-security.cabal
  if flag(use-network-uri)
    build-depends: network-uri >= 2.6 && < 2.7,
                   network     >= 2.6 && < 2.8
  else
    build-depends: network     >= 2.5 && < 2.6
