name:                hackage-security-curl
version:             0.1.0.0
synopsis:            curl bindings for hackage-security
description:         hackage-security bindings for curl (and other
                     external downloaders)
                     .
                     This is part of the Hackage Security infrastructure.
homepage:            http://github.com/well-typed/hackage-security/
license:             BSD3
license-file:        LICENSE
author:              Edsko de Vries
maintainer:          edsko@well-typed.com
copyright:           Copyright 2015 Well-Typed LLP
category:            Distribution
build-type:          Simple
cabal-version:       >=1.10

tested-with:
  GHC == 9.12.1
  GHC == 9.10.1
  GHC == 9.8.2
  GHC == 9.6.6
  GHC == 9.4.8
  GHC == 9.2.8
  GHC == 9.0.2
  GHC == 8.10.7
  GHC == 8.8.4
  GHC == 8.6.5
  GHC == 8.4.4

library
  exposed-modules:     Hackage.Security.Client.Repository.HttpLib.Curl
  build-depends:       base             >= 4.11     && < 4.22,
                       bytestring       >= 0.10.8.2 && < 0.13,
                       network-uri      >= 2.6      && < 2.7,
                       network          >= 2.6      && < 3.3,
                       process          >= 1.6.3    && < 1.7,
                       hackage-security >= 0.6.2    && < 0.7
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
