name:                hackage-security-http-client
version:             0.1.1
synopsis:            Hackage security bindings for the http-client library
homepage:            http://github.com/well-typed/hackage-security/
license:             BSD3
license-file:        LICENSE
author:              Edsko de Vries
maintainer:          edsko@well-typed.com
copyright:           Copyright 2015 Well-Typed LLP
category:            Distribution
build-type:          Simple
cabal-version:       >=1.10

flag use-network-uri
  description: Are we using network-uri?
  manual: False

library
  exposed-modules:     Hackage.Security.Client.Repository.HttpLib.HttpClient
  build-depends:       base               >= 4.4,
                       bytestring         >= 0.9,
                       data-default-class >= 0.0,
                       http-client        >= 0.5 && < 0.6,
                       http-types         >= 0.8,
                       hackage-security   >= 0.5 && < 0.6
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  FlexibleContexts
                       RankNTypes
                       ScopedTypeVariables
  other-extensions:    OverloadedStrings
  ghc-options:         -Wall

  -- see comments in hackage-security.cabal
  if flag(use-network-uri)
    build-depends: network-uri >= 2.6 && < 2.7,
                   network     >= 2.6 && < 2.8
  else
    build-depends: network     >= 2.5 && < 2.6
